fixed lv, added noalign

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -68,6 +68,10 @@ section {
 	position: relative;
 }
 
+section.noalign {
+	min-height: 0;
+}
+
 section.faded {
 	opacity: 0;
 }
